Add Some Content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>BedwarsRel | Minecraft Bedwars Plugin</title>
@@ -8,20 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">BedwarsRel</a>
-          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="index.html">Home</a></li>
-          </ul>
-          <ul class="side-nav" id="mobile-demo">
-            <li><a href="index.html">Home</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <div id="preloader"></div>
+    <header></header>
     <main>
       <div class="container">
         <div class="row">
@@ -32,11 +20,7 @@
       </div>
     </main>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $(".button-collapse").sideNav();
-      });
-    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <script type="text/javascript" src="script/scripts.js"></script>
   </body>
 </html>
